--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
 spring.application.name=seckill
+
+# Web ??????? http://localhost:8080
+server.port=8080
+
+# ???????????? MySQL ??
+spring.datasource.url=jdbc:mysql://localhost:3306/seckill?
+#serverTimezone=GMT&useUnicode=true&characterEncoding=utf8&useSSL=true
+# ?????????????????
+spring.datasource.username=root
+spring.datasource.password=PaSSword12!
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# MyBatis Mapper Config
+mybatis.mapper-locations=classpath:mappers/*.xml
+mybatis.configuration.map-underscore-to-camel-case=true
