--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,37 @@
 spring.application.name=seckill
 
-# Web ??????? http://localhost:8080
+# Web server port number http://localhost:8080
 server.port=8080
 
-# ???????????? MySQL ??
-spring.datasource.url=jdbc:mysql://localhost:3306/seckill?
-#serverTimezone=GMT&useUnicode=true&characterEncoding=utf8&useSSL=true
-# ?????????????????
+# Configure data resource: MySQL connection
+spring.datasource.url=jdbc:mysql://localhost:3306/seckill?serverTimezone=GMT&useUnicode=true&characterEncoding=utf8&useSSL=true
 spring.datasource.username=root
 spring.datasource.password=PaSSword12!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Redis, Jedis configuration
+# Redis Database index (default is 0)
+spring.data.redis.database=0
+# Redis server address
+spring.data.redis.host=localhost
+# Redis server connection port
+spring.data.redis.port=6379
+# Redis server connection password (default is empty)
+#spring.redis.password=
+# Maximum number of connections in the connection pool (indicated by a negative value with no limit)
+spring.data.redis.jedis.pool.max-active=200
+# Maximum connection pool blocking wait time (use negative values to indicate no limit)
+spring.data.redis.jedis.pool.max-wait=-1
+# The maximum free connection in the connection pool
+spring.data.redis.jedis.pool.max-idle=8
+# The minimum free connection in the connection pool
+spring.data.redis.jedis.pool.min-idle=0
+# Connection Timeout (milliseconds)
+spring.data.redis.timeout=0
+#spring-session usage
+#spring.session.store-type=redis
+
+
 
 # MyBatis Mapper Config
 mybatis.mapper-locations=classpath:mappers/*.xml
