--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,8 +31,14 @@ spring.data.redis.timeout=0
 #spring-session usage
 #spring.session.store-type=redis
 
-
-
 # MyBatis Mapper Config
 mybatis.mapper-locations=classpath:mappers/*.xml
 mybatis.configuration.map-underscore-to-camel-case=true
+
+### RocketMQ ###
+## Windows start RocketMQ
+## 0 navigate to the roketMq/bin
+## 1 CMD input the command "mqnamesrv" to start the roketMq server (keep the cmd window opened)
+## 2 open a new CMD, input the command "mqbroker -n 127.0.0.1:9876 autoCreateTopicEnable=true" to start the broker (keep the cmd window open)
+rocketmq.name-server=localhost:9876
+rocketmq.producer.group=my-group
